Bug 130086 - Channels with & in name are displayed incorrectly
Summary: Channels with & in name are displayed incorrectly
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-07-01 02:00 UTC by Craig
Modified: 2006-07-01 02:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Craig 2006-07-01 02:00:48 UTC
Version:            (using KDE KDE 3.5.3)
Installed from:    Gentoo Packages
Compiler:          gcc-4.1.1 
OS:                Linux

Non-fatal cosmetic buglet

When joining a channel with & in it's name (for example #geeks&coders) the & is duplicated. The example given comes out as #geeks&&coders (with an underlined c) on the channel tab.

All other references and dialogs seem correct.
Comment 1 Peter Simonsson 2006-07-01 02:18:26 UTC
Fixed in svn trunk... will be in 0.20. Thanks for your report.