Fix display of channel names containing &

BUG: 130086

svn path=/trunk/extragear/network/konversation/; revision=556643